resolved z-index issue with code-blocks

--- a/packages/code-block/css/main.css
+++ b/packages/code-block/css/main.css
@@ -1,31 +1,12 @@
-
-
 .d2-element {
     height: 350px;
 }
-.code-block {
-    display: inline-block !important;
-    resize: none;
-    outline: none;
-    width: 60vw;
-    max-height: 50vh;
-    min-height: 15vh;
-    overflow-x: hidden !important;
-    overflow-y: auto !important;
-    padding: 10px !important;
-    white-space: pre-wrap !important;
-    overflow-wrap: break-word !important;
-    word-wrap: break-word !important;
-    word-break: break-all !important;
-    word-spacing: normal !important;
-}
-
 .code-button {
     background: green;
     position: absolute;
     top: 5px;
     right: 10px;
-    z-index: 4;
+    z-index: 2;
     width: 20px;
     height: 15px;
 }
@@ -38,8 +19,6 @@
     border-radius: 10px;
     display: block;
     padding-top: 10px;
-
-
 }
 .output-area {
     position: absolute;
@@ -48,19 +27,16 @@
     padding: 0;
     bottom: 0;
     top: 0;
-    z-index: 3;
+    z-index: 1;
 }
-
 .input-area {
-    z-index: 4;
+    z-index: 2;
     position: relative;
     display: inline-block;
     background: transparent !important;
     color: transparent;
     caret-color: white;
 }
-
-
 .code-block {
     display: inline-block !important;
     resize: none;
@@ -101,35 +77,5 @@
     white-space: pre-wrap;
     word-break: break-all;
     word-spacing: 0px;
-
 }
 
-.code-block-container {
-    width: 60vw;
-    max-height: 50vh;
-    min-height: 15vh;
-    position: relative;
-    background: black;
-    border-radius: 10px;
-    display: block;
-
-
-}
-.output-area {
-    position: absolute;
-    display: inline-block !important;
-    background: transparent !important;
-    padding: 0;
-    bottom: 0;
-    top: 10px;
-    z-index: 3;
-}
-
-.input-area {
-    z-index: 4;
-    position: relative;
-    display: inline-block;
-    background: transparent !important;
-    color: transparent;
-    caret-color: white;
-}
